# adiman

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: config.py
app/core/: db.py  dependencies.py  middleware.py
app/user/: models.py
app/v1/: user.py
migration/: env.py
migration/versions/: 109129b23688_init.py
